# jenkins-pipeline

./: Jenkinsfile  MyDotNetApp.csproj
.github/workflows/: cicd-pipeline.yml  env-variable-ci.yml  jenkins-trigger.yml  python-ci.yml
MyDotNetApp/: Program.cs
MyDotNetApp.Tests/: MyDotNetApp.Tests.csproj  UnitTest1.cs
MyDotNetApp/.github/workflows/: cicd-pipeline.yml
StudentGradeCalculator/: CMakeLists.txt  Jenkinsfile  README.md  main.c
employee-payroll-management-system/: Jenkinsfile  README.md  app.py  payroll.py  test_payroll.py
employee-payroll-management-system/.github/workflows/: python-ci.yml
led-firmware/: CMakeLists.txt
vehicle-parking/: Jenkinsfile
